feat: update scss of page

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -29,3 +29,21 @@
     }
   }
 }
+
+.benefit-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.benefit-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 1rem;
+}
